==> nickshl/DevBoy/STM32F415APP/DevCore/Display/ILI9341.cpp <==
#include "ILI9341.h"
#define CMD_NOP        0x00 // No Operation
#define CMD_SWRESET    0x01 // Software Reset
#define CMD_RDDID      0x04 // Read Display Identification Information
#define CMD_RDDST      0x09 // Read Display Status
#define CMD_RDMODE     0x0A // Read Display Power Mode
#define CMD_RDMADCTL   0x0B // Read Display MADCTL
#define CMD_RDPIXFMT   0x0C // Read Display Pixel Format
#define CMD_RDIMGFMT   0x0D // Read Display Image Format
#define CMD_RDSIGMOD   0x0E // Read Display Signal Mode
#define CMD_RDSELFDIAG 0x0F // Read Display Self-Diagnostic Result
#define CMD_SLPIN      0x10 // Enter Sleep Mode
#define CMD_SLPOUT     0x11 // Sleep OUT
#define CMD_PTLON      0x12 // Partial Mode ON
#define CMD_NORON      0x13 // Normal Display Mode ON
#define CMD_INVOFF     0x20 // Display Inversion OFF
#define CMD_INVON      0x21 // Display Inversion ON
#define CMD_GAMMASET   0x26 // Gamma Set
#define CMD_DISPOFF    0x28 // Display OFF
#define CMD_DISPON     0x29 // Display ON
#define CMD_CASET      0x2A // Column Address Set
#define CMD_PASET      0x2B // Page Address Set
#define CMD_RAMWR      0x2C // Memory Write
#define CMD_GSET       0x2D // Color SET
#define CMD_RAMRD      0x2E // Memory Read
#define CMD_PTLAR      0x30 // Partial Area
#define CMD_VSCRDEF    0x33 // Vertical Scrolling Definition
#define CMD_TELOFF     0x34 // Tearing Effect Line OFF
#define CMD_TELON      0x35 // Tearing Effect Line ON
#define CMD_MADCTL     0x36 // Memory Access Control

inline void ILI9341::SpiWrite(uint8_t c)
{
  HAL_GPIO_WritePin(LCD_CS_GPIO_Port, LCD_CS_Pin, GPIO_PIN_RESET); // Pull down CS
  HAL_SPI_Transmit(hspi, &c, sizeof(c), 1U);
  HAL_GPIO_WritePin(LCD_CS_GPIO_Port, LCD_CS_Pin, GPIO_PIN_SET); // Pull up CS
}

inline void ILI9341::WriteCommand(uint8_t c)
{
  HAL_GPIO_WritePin(LCD_DC_GPIO_Port, LCD_DC_Pin, GPIO_PIN_RESET); // Command
  SpiWrite(c);
}

inline void ILI9341::WriteData(uint8_t c)
{
  HAL_GPIO_WritePin(LCD_DC_GPIO_Port, LCD_DC_Pin, GPIO_PIN_SET); // Data
  SpiWrite(c);
}

void ILI9341::SetAddrWindow(uint16_t x0, uint16_t y0, uint16_t x1, uint16_t y1)
{
  WriteCommand(CMD_CASET); // Column address set
  WriteData(x0 >> 8);
  WriteData(x0 & 0xFF); // XSTART 
  WriteData(x1 >> 8);
  WriteData(x1 & 0xFF); // XEND

  WriteCommand(CMD_PASET); // Row address set
  WriteData(y0 >> 8);
  WriteData(y0);        // YSTART
  WriteData(y1 >> 8);
  WriteData(y1);        // YEND

  WriteCommand(CMD_RAMWR); // write to RAM
  
  // Prepare for write data
  HAL_GPIO_WritePin(LCD_DC_GPIO_Port, LCD_DC_Pin, GPIO_PIN_SET); // Data
}

void ILI9341::SetRotation(uint8_t m)
{
  WriteCommand(CMD_MADCTL);
  rotation = m % 4; // can't be higher than 3
  switch (rotation)
  {
    case 0:
      WriteData(MADCTL_BGR);
      width  = TFT_HEIGHT;
      height = TFT_WIDTH;
      break;

    case 1:
      WriteData(MADCTL_MV | MADCTL_BGR);
      width  = TFT_WIDTH;
      height = TFT_HEIGHT;
      break;

    case 2: // Y: up -> down 
      WriteData(MADCTL_MX | MADCTL_MY | MADCTL_BGR);
      width  = TFT_HEIGHT;
      height = TFT_WIDTH;
      break;

    case 3: // X: left -> right 
      WriteData(MADCTL_MX | MADCTL_MY | MADCTL_MV | MADCTL_BGR);
      width  = TFT_WIDTH;
      height = TFT_HEIGHT;
      break;

    default:
      break;
  }
}

void ILI9341::PushColor(uint16_t color)
{
  HAL_GPIO_WritePin(LCD_DC_GPIO_Port, LCD_DC_Pin, GPIO_PIN_SET); // Data

  SpiWrite(color >> 8);
  SpiWrite(color);
}

void ILI9341::DrawPixel(int16_t x, int16_t y, uint16_t color)
{
  if((x < 0) ||(x >= width) || (y < 0) || (y >= height)) return;

  SetAddrWindow(x,y,x+1,y+1);

  HAL_GPIO_WritePin(LCD_DC_GPIO_Port, LCD_DC_Pin, GPIO_PIN_SET); // Data

  SpiWrite(color >> 8);
  SpiWrite(color);
}

void ILI9341::DrawFastVLine(int16_t x, int16_t y, int16_t h, uint16_t color)
{
  // Rudimentary clipping
  if((x >= width) || (y >= height)) return;

  if((y+h-1) >= height) h = height-y;

  SetAddrWindow(x, y, x, y+h-1);

  uint8_t hi = color >> 8, lo = color;

  HAL_GPIO_WritePin(LCD_DC_GPIO_Port, LCD_DC_Pin, GPIO_PIN_SET); // Data

  while (h--)
  {
    SpiWrite(hi);
    SpiWrite(lo);
  }
}

void ILI9341::DrawFastHLine(int16_t x, int16_t y, int16_t w, uint16_t color)
{
  if((x >= width) || (y >= height)) return;
  if((x+w-1) >= width)  w = width-x;

  SetAddrWindow(x, y, x+w-1, y);

  uint8_t hi = color >> 8, lo = color;

  HAL_GPIO_WritePin(LCD_DC_GPIO_Port, LCD_DC_Pin, GPIO_PIN_SET); // Data

  while (w--)
  {
    SpiWrite(hi);
    SpiWrite(lo);
  }
}

void ILI9341::FillScreen(uint16_t color)
{
  FillRect(0, 0, width, height, color);
}

void ILI9341::FillRect(int16_t x, int16_t y, int16_t w, int16_t h, uint16_t color)
{
  if((x >= width) || (y >= height)) return;
  if((x + w - 1) >= width)  w = width  - x;
  if((y + h - 1) >= height) h = height - y;

  SetAddrWindow(x, y, x+w-1, y+h-1);

  uint8_t hi = color >> 8, lo = color;

  HAL_GPIO_WritePin(LCD_DC_GPIO_Port, LCD_DC_Pin, GPIO_PIN_SET); // Data

  HAL_GPIO_WritePin(LCD_CS_GPIO_Port, LCD_CS_Pin, GPIO_PIN_RESET); // Pull down CS
  for(y=h; y>0; y--)
  {
    for(x=w; x>0; x--)
    {
       // Wait until TXE flag is set to send data
       while(__HAL_SPI_GET_FLAG(hspi, SPI_FLAG_TXE) == RESET);
       hspi->Instance->DR = hi;
       while(__HAL_SPI_GET_FLAG(hspi, SPI_FLAG_TXE) == RESET);
       hspi->Instance->DR = lo;
    }
  }
  HAL_GPIO_WritePin(LCD_CS_GPIO_Port, LCD_CS_Pin, GPIO_PIN_SET); // Pull up CS
}

void ILI9341::InvertDisplay(bool invert)
{
  WriteCommand(invert ? CMD_INVON : CMD_INVOFF);
}

inline uint8_t ILI9341::SpiRead(void)
{
  // Result variable
  uint8_t r = 0;
  // Pull down CS
  HAL_GPIO_WritePin(LCD_CS_GPIO_Port, LCD_CS_Pin, GPIO_PIN_RESET);
  // Receive data
  HAL_SPI_Receive(hspi, &r, sizeof(r), 100U);
  // Pull up CS
  HAL_GPIO_WritePin(LCD_CS_GPIO_Port, LCD_CS_Pin, GPIO_PIN_SET);
  // Return result
  return r;
}

inline uint8_t ILI9341::ReadData(void)
{
  // Data
  HAL_GPIO_WritePin(LCD_DC_GPIO_Port, LCD_DC_Pin, GPIO_PIN_SET); // Data
  // Receive data
  uint8_t r = SpiRead();
  // Return result
  return r;
}
