==> ThingPulse/esp8266-plane-spotter-color/ILI9341.cpp <==
#include "ILI9341.h"
#include <pgmspace.h>
#include <avr/pgmspace.h>
#include <limits.h>
#include "pins_arduino.h"
#include "wiring_private.h"
#include <SPI.h>
#define hwSPI true
#define writeCmdDataTmp(cmd, ...)   {               \
        const uint8_t tmp##cmd##_[] = { __VA_ARGS__ };              \
        writeCmdData(cmd, (uint8_t *) &tmp##cmd##_[0], sizeof(tmp##cmd##_));  \
}

void Adafruit_ILI9341::spiwrite(uint8_t c) {

  //Serial.print("0x"); Serial.print(c, HEX); Serial.print(", ");
#ifndef ESP8266
  if (hwSPI) {
#endif
#if defined (__AVR__)
      uint8_t backupSPCR = SPCR;
    SPCR = mySPCR;
    SPDR = c;
    while(!(SPSR & _BV(SPIF)));
    SPCR = backupSPCR;
#elif defined(TEENSYDUINO) || defined(ESP8266)
    SPI.write(c);
#elif defined (__arm__)
    SPI.setClockDivider(11); // 8-ish MHz (full! speed!)
    SPI.setBitOrder(MSBFIRST);
    SPI.setDataMode(SPI_MODE0);
    SPI.transfer(c);
#endif
#ifndef ESP8266
  } else {
    // Fast SPI bitbang swiped from LPD8806 library
    for(uint8_t bit = 0x80; bit; bit >>= 1) {
      if(c & bit) {
  //digitalWrite(_mosi, HIGH);
  *mosiport |=  mosipinmask;
      } else {
  //digitalWrite(_mosi, LOW);
  *mosiport &= ~mosipinmask;
      }
      //digitalWrite(_sclk, HIGH);
      *clkport |=  clkpinmask;
      //digitalWrite(_sclk, LOW);
      *clkport &= ~clkpinmask;
    }
  }
#endif
}

void Adafruit_ILI9341::writecommand(uint8_t c) {
    spiDcLow();
    spiCsLow();

    spiwrite(c);

    spiCsHigh();
}

void Adafruit_ILI9341::writedata(uint8_t c) {
    spiDcHigh();
    spiCsLow();

    spiwrite(c);

    spiCsHigh();
}

void Adafruit_ILI9341::writedata(uint8_t * data, uint8_t size) {
    spiDcHigh();
    spiCsLow();

    spiwriteBytes(data, size);

    spiCsHigh();
}

void Adafruit_ILI9341::setAddrWindow(uint16_t x0, uint16_t y0, uint16_t x1, uint16_t y1) {
    spiCsLow();
    setAddrWindow_(x0, y0, x1, y1);
    spiCsHigh();
}

void Adafruit_ILI9341::setAddrWindow_(uint16_t x0, uint16_t y0, uint16_t x1, uint16_t y1) {

    uint8_t buffC[] = { (uint8_t) (x0 >> 8), (uint8_t) x0, (uint8_t) (x1 >> 8), (uint8_t) x1 };
    uint8_t buffP[] = { (uint8_t) (y0 >> 8), (uint8_t) y0, (uint8_t) (y1 >> 8), (uint8_t) y1 };

    spiDcLow();
    spiwrite(ILI9341_CASET);
    spiDcHigh();
    spiwriteBytes(&buffC[0], sizeof(buffC));

    spiDcLow();
    spiwrite(ILI9341_PASET);
    spiDcHigh();
    spiwriteBytes(&buffP[0], sizeof(buffP));

    spiDcLow();
    spiwrite(ILI9341_RAMWR);
    spiDcHigh();

}

void Adafruit_ILI9341::pushColor(uint16_t color) {
  if (hwSPI) spi_begin();

  spiDcHigh();
  spiCsLow();

#ifdef ESP8266
  spiwrite16(color);
#else
  spiwrite(color >> 8);
  spiwrite(color);
#endif

  spiCsHigh();

  if (hwSPI) spi_end();
}

void Adafruit_ILI9341::drawPixel(int16_t x, int16_t y, uint16_t color) {

    if((x < 0) || (x >= _width) || (y < 0) || (y >= _height)) {
        return;
    }

    if(hwSPI) {
        spi_begin();
    }

    spiCsLow();

    setAddrWindow_(x, y, x + 1, y + 1);

#ifdef ESP8266
    spiwrite16(color);
#else
    spiwrite(color >> 8);
    spiwrite(color);
#endif

    spiCsHigh();

    if(hwSPI) {
        spi_end();
    }
}

void Adafruit_ILI9341::drawFastVLine(int16_t x, int16_t y, int16_t h, uint16_t color) {

    // Rudimentary clipping
    if((x >= _width) || (y >= _height)) return;
    if((y + h - 1) >= _height)   h = _height - y;

    if(hwSPI) {
        spi_begin();
    }

    spiCsLow();

    setAddrWindow_(x, y, x, (y + h - 1));

    uint8_t colorBin[] = { (uint8_t) (color >> 8), (uint8_t) color };
    spiwritePattern(&colorBin[0], 2, h);

    spiCsHigh();

    if(hwSPI) {
        spi_end();
    }
}

void Adafruit_ILI9341::drawFastHLine(int16_t x, int16_t y, int16_t w, uint16_t color) {

    // Rudimentary clipping
    if((x >= _width) || (y >= _height)) return;
    if((x+w-1) >= _width)  w = _width-x;

    if(hwSPI) {
        spi_begin();
    }

    spiDcHigh();
    spiCsLow();

    setAddrWindow_(x, y, (x + w - 1), y);

    uint8_t colorBin[] = { (uint8_t) (color >> 8), (uint8_t) color };
    spiwritePattern(&colorBin[0], 2, w);

    spiCsHigh();

    if(hwSPI) {
        spi_end();
    }
}

void Adafruit_ILI9341::fillScreen(uint16_t color) {
    fillRect(0, 0, _width, _height, color);
}

void Adafruit_ILI9341::fillRect(int16_t x, int16_t y, int16_t w, int16_t h, uint16_t color) {

    // rudimentary clipping (drawChar w/big text requires this)
    if((x >= _width) || (y >= _height))
        return;
    if((x + w - 1) >= _width)
        w = _width - x;
    if((y + h - 1) >= _height)
        h = _height - y;

    if(hwSPI) {
        spi_begin();
    }

    spiCsLow();

    setAddrWindow_(x, y, (x + w - 1), (y + h - 1));

    uint8_t colorBin[] = { (uint8_t) (color >> 8), (uint8_t) color };
    spiwritePattern(&colorBin[0], 2, (w * h));

    spiCsHigh();

    if(hwSPI) {
        spi_end();
    }
}

void Adafruit_ILI9341::setRotation(uint8_t m) {

  if (hwSPI) spi_begin();
  writecommand(ILI9341_MADCTL);
  rotation = m % 4; // can't be higher than 3
  switch (rotation) {
   case 0:
     writedata(MADCTL_MX | MADCTL_BGR);
     _width  = ILI9341_TFTWIDTH;
     _height = ILI9341_TFTHEIGHT;
     break;
   case 1:
     writedata(MADCTL_MV | MADCTL_BGR);
     _width  = ILI9341_TFTHEIGHT;
     _height = ILI9341_TFTWIDTH;
     break;
  case 2:
    writedata(MADCTL_MY | MADCTL_BGR);
     _width  = ILI9341_TFTWIDTH;
     _height = ILI9341_TFTHEIGHT;
    break;
   case 3:
     writedata(MADCTL_MX | MADCTL_MY | MADCTL_MV | MADCTL_BGR);
     _width  = ILI9341_TFTHEIGHT;
     _height = ILI9341_TFTWIDTH;
     break;
  }
  if (hwSPI) spi_end();
}

void Adafruit_ILI9341::invertDisplay(boolean i) {
  if (hwSPI) spi_begin();
  writecommand(i ? ILI9341_INVON : ILI9341_INVOFF);
  if (hwSPI) spi_end();
}

uint8_t Adafruit_ILI9341::spiread(void) {
  uint8_t r = 0;

  if (hwSPI) {
#if defined (__AVR__)
    uint8_t backupSPCR = SPCR;
    SPCR = mySPCR;
    SPDR = 0x00;
    while(!(SPSR & _BV(SPIF)));
    r = SPDR;
    SPCR = backupSPCR;
#elif defined(TEENSYDUINO)
    r = SPI.transfer(0x00);
#elif defined (__arm__)
    SPI.setClockDivider(11); // 8-ish MHz (full! speed!)
    SPI.setBitOrder(MSBFIRST);
    SPI.setDataMode(SPI_MODE0);
    r = SPI.transfer(0x00);
#else
    r = SPI.transfer(0x00);
#endif
  } else {
#ifndef ESP8266
    for (uint8_t i=0; i<8; i++) {
      digitalWrite(_sclk, LOW);
      digitalWrite(_sclk, HIGH);
      r <<= 1;
      if (digitalRead(_miso))
  r |= 0x1;
    }
#endif
  }
  //Serial.print("read: 0x"); Serial.print(r, HEX);
  
  return r;
}

uint8_t Adafruit_ILI9341::readdata(void) {
    if(hwSPI) spi_begin();
    spiCsLow();
    spiDcLow();
    uint8_t r = spiread();
    spiCsHigh();
    if(hwSPI) spi_end();
    return r;
}
